--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ environment:
 
 dependencies:
   http: ^0.12.0+2
+  cached_network_image: ^1.1.2+1
   flutter_swiper : ^1.1.6
   flutter:
     sdk: flutter
