feat: new PokemonCard

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
     - assets/poke-ball.png
     - assets/pokeball-hd.png
     - assets/fight-hd.png
+    - assets/black_pokeball.png
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
