--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ environment:
 
 dependencies:
   http: ^0.12.0+2
-  cached_network_image: ^1.1.2+1
+  cached_network_image: ^2.0.0-rc
   flutter_swiper : ^1.1.6
   flutter:
     sdk: flutter
@@ -49,8 +49,6 @@ flutter:
     - assets/pokeball-hd.png
     - assets/fight-hd.png
     - assets/black_pokeball.png
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
