--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_swiper : ^1.1.6
   flutter:
     sdk: flutter
+  firebase_core: ^0.2.5  
   rxdart: ^0.18.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
